# advent-of-code

./: .gitignore
2021/: CMakeLists.txt
2021/Day01/: main.cpp
2021/Day02/: main.cpp
2021/Day03/: main.cpp
2021/Day04/: main.cpp
2021/Day05/: main.cpp
2021/Day06/: main.cpp
2021/Day07/: main.cpp
2021/utils/: file_utils.cpp  file_utils.h
2022/: go.mod
2022/day04/: main.go
2022/day09/: main.go
2022/day13/: main.go
2022/day14/: main.go
2022/day15/: main.go
aoc_2024/src/: main.rs
aoc_2024/src/day1/: mod.rs
aoc_2024/src/day2/: mod.rs
aoc_2024/src/day3/: mod.rs
aoc_2024/src/day4/: mod.rs
aoc_2024/src/day5/: mod.rs
aoc_2024/src/day6/: mod.rs
aoc_2024/src/day7/: mod.rs
aoc_2024/src/day8/: mod.rs
aoc_2025/day_01/src/: main.rs
aoc_2025/day_02/src/: main.rs
go/: go.mod
go/2022/day03/: main.go
go/2022/day05/: main.go
go/2022/day06/: main.go
go/2022/day07/: main.go
go/2022/day08/: main.go
go/2022/day1/: main.go
go/2022/day10/: main.go
go/2022/day11/: main.go
go/2022/day12/: main.go
go/2022/day2/: main.go
